# CryptoConduit-MCP

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/core/: mod.rs  types.rs
src/core/analysis/: book_dynamics.rs  divergence.rs  fair_value.rs  fees.rs  microstructure.rs  mod.rs  momentum.rs
src/core/execution/: config.rs  live.rs  mod.rs  risk.rs
src/core/infrastructure/: atomic.rs  latency.rs  mod.rs  recovery.rs
src/core/monitor/: alerts.rs  auto_trade.rs  logger.rs  mod.rs  poller.rs  state.rs
src/core/paper/: engine.rs  mod.rs  portfolio.rs
src/core/providers/: binance.rs  chainlink.rs  gamma.rs  mod.rs  polymarket.rs  resolver.rs  trades_ws.rs
src/mcp/: formatter.rs  mod.rs  tools_analysis.rs  tools_auto.rs  tools_book.rs  tools_market.rs  tools_monitor.rs  tools_paper.rs  tools_trading.rs  tools_whale.rs
