[package]
name = "crypto-conduit-mcp"
version = "0.1.0"
edition = "2024"
description = "Crypto prediction market analysis, trading, and intelligence toolkit — powered by Polymarket and Binance"
license = "AGPL-3.0-or-later"
repository = "https://github.com/chxndre/CryptoConduit-MCP"
keywords = ["mcp", "polymarket", "crypto", "prediction-markets", "trading"]
categories = ["command-line-utilities", "finance"]

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
schemars = "1.0"
dirs = "5"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
regex = "1"

# Live trading (Phase 2)
polymarket-client-sdk = { version = "0.4", features = ["clob", "heartbeats", "ctf"] }
rust_decimal = "1.36"
k256 = { version = "0.13.4", features = ["ecdsa"] }
alloy = { version = "1.6", default-features = false, features = ["providers", "signer-local", "reqwest-rustls-tls"] }

[dev-dependencies]
tempfile = "3"
